src/public/css/app.css
:root {
    --main-bg-color: #1f6fc2;
    --main-bg-color-dark: #0858aa;
    --main-border-color: #ccc;
    --main-font-color: #555;
}

body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    padding: 0;
}


ul {
    padding: 0;
}

input{
    box-sizing:border-box;
    border-radius: 5px;
    border: solid 1px var(--main-border-color);
    line-height: 200%;
    font-size: 100%;
    padding-left: 5px;
}


/* Columnas responsive */
.col-res-1, .col-res-2, .col-res-3, .col-res-4, .col-res-5, .col-res-6, .col-res-7, .col-res-8, .col-res-9, .col-res-10 {
    width: 100%;
}

.offset-1, .offset-2, .offset-3, .offset-4, .offset-5, .offset-6, .offset-7, .offset-8, .offset-9 {
    margin-left: 0;
}

.container {
    width: 90%;
    margin-left: 5%;
}

.navbar {
    width: 100vw;
    height: 7vh;
    position: fixed;
    background-color: #ffffff;
    left: 0;
    top: 0;
    border-bottom: solid 1px var(--main-border-color);
}


.logo{
    color: var(--main-bg-color);
    font-size: 150%;
    font-weight: 800;
    margin-top: 1vh;
}

.navbar-items ul {
    padding-left: 0;
}

.navbar-items li {
    list-style-type: none;
    display: inline;
    font-size: 85%;
}

.body{
    margin-top: 5vh;
    padding-top: 2vh;
}

a {
    text-decoration: none;
}

.navbar-items a {
    color:  var(--main-bg-color);
}

.cover {
    background-image:
        linear-gradient(to left, rgba(55, 136, 252, 0.5), rgba(57, 119, 223, 0.8)),
        url('../imgs/portada.jpg');
    height: 40vh;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    color: #fff;
}

.cover-body {

    padding-top: 5%;
}

.cover h1 {
    font-size: 150%;
    padding-top: 10%;
    margin-bottom: 0;
}

.cover h2 {
    font-size: 100%;
    font-weight: 400;
    width: 95%;
    padding-bottom: 2.5%;
}

.col-1 {
    width: 10%;
    float: left;
}

.col-2 {
    width: 20%;
    float: left;
}

.col-3 {
    width: 30%;
    float: left;
}

.col-4 {
    width: 40%;
    float: left;
}

.col-5 {
    width: 50%;
    float: left;
}

.col-6 {
    width: 60%;
    float: left;
}

.col-7 {
    width: 70%;
    float: left;
}

.col-8 {
    width: 80%;
    float: left;
}

.col-9 {
    width: 90%;
    float: left;
}

.col-10 {
    width: 100%;
    float: left;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.text-lg{
    font-size: 125%;
}

.text-sm {
    font-size: 85%;
}

.text-danger {
    color: #e3342f;
}

.text-success {
    color: #38c172;
}

.badge-success {
    background-color: #38c172;
    padding: 2px;
    color: #fff;
}

.ml-1 {
    margin-left: 2.5%;
}

.ml-2 {
    margin-left: 5%;
}

.ml-3 {
    margin-left: 7.5%;
}

.ml-4 {
    margin-left: 10%;
}

.ml-5 {
    margin-left: 12.5%;
}

.p-1 {
    padding: 1%;
}

.p-2 {
    padding: 2%;
}

.p-3 {
    padding: 3%;
}

.p-4 {
    padding: 4%;
}

.p-5 {
    padding: 5%;
}


@media (min-width: 768px) {

    .col-res-1 {
        width: 10%;
        float: left;
    }

    .col-res-2 {
        width: 20%;
        float: left;
    }

    .col-res-3 {
        width: 30%;
        float: left;
    }

    .col-res-4 {
        width: 40%;
        float: left;
    }

    .col-res-5 {
        width: 50%;
        float: left;
    }

    .col-res-6 {
        width: 60%;
        float: left;
    }

    .col-res-7 {
        width: 70%;
        float: left;
    }

    .col-res-8 {
        width: 80%;
        float: left;
    }

    .col-res-9 {
        width: 90%;
        float: left;
    }

    .col-res-10 {
        width: 100%;
        float: left;
    }


    .offset-1 {
        margin-left: 10%;
    }

    .offset-2 {
        margin-left: 20%;
    }

    .offset-3 {
        margin-left: 30%;
    }

    .offset-4 {
        margin-left: 40%;
    }

    .offset-5 {
        margin-left: 50%;
    }

    .offset-6 {
        margin-left: 60%;
    }

    .offset-7 {
        margin-left: 70%;
    }

    .offset-8 {
        margin-left: 80%;
    }

    .offset-9 {
        margin-left: 90%;
    }

    .row {
        width: 100%;
        float: left;
    }

    .container {
        width: 75%;
        margin-left: 12.5%;
        overflow: hidden;
    }

    .navbar{
        height: 6vh;
    }

    .navbar-items {
        visibility: visible;
        margin-top: 0;
    }

    .navbar-items li {
        display: inline;
    }
}


.btn {
    cursor: pointer;
    padding: 5px;
    border-radius: 5px;
}

.btn-lg {
    padding: 3vw;
    font-size: 90%;
    font-weight: 500;
}

.btn-block {
    width: 100%;
}

.btn-blue {
    background-color:  var(--main-bg-color);
    color: #ffffff;
    transition-duration: 0.5s;
    margin: 0;
}

.btn-blue:hover {
    background-color: var(--main-bg-color-dark);
    transition-duration: 0.5s;
}


.btn-border-white {
    background-color: #ffffff;
    color: var(--main-bg-color);
    transition-duration: 0.5s;
}

.btn-border-white:hover {
    background-color: var(--main-bg-color);
    color: #fff;
    transition-duration: 0.5s;
}

.btn-border-light {
    background-color: #eee;
    border-radius: 5px;
    border: 0;
    color: var(--main-bg-color);
    transition-duration: 0.5s;
}

.hidden {
    visibility: hidden;
}

.d-none {
    display: none;
}

.fadeout {
    opacity: 0;
    transition-duration: 0.5s;
}

.card {
    border: solid 1px var(--main-border-color);
    border-radius: 5px;
    padding: 1.5%;
    margin-bottom: 2.5%;
    box-shadow: 10px 5px 5px #ccc;
}

.section-title {
    padding-bottom: 5px;
    border-bottom: solid 1px var(--main-border-color);
    font-family: 'Roboto', sans-serif;
    font-size: 150%;
    font-weight: 900;
    color: var(--main-font-color);
}

.info-title {
    padding-bottom: 10px;
    border-bottom: solid 1px var(--main-border-color);
    font-family: 'Open sans', sans-serif;
    font-size: 120%;
    font-weight: 600;
    color: var(--main-font-color);
}

p {
    color: var(--main-font-color);
}

.courseCard {
    width: 100%;
    list-style: none;
    word-wrap: break-word;
    border-bottom: solid 1px var(--main-border-color);
    padding-bottom: 5%;
    margin-bottom: 5%;
    float: left;
    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 1s; /* Firefox < 16 */
    -ms-animation: fadein 1s; /* Internet Explorer */
    -o-animation: fadein 1s; /* Opera < 12.1 */
    animation: fadein 1s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}



.courseCard img {
    width: 40%;
    margin-right: 5%;
    float: left;
}

.courseCardTitle {
    width: 50%;
    margin: 0;
    float: left;
    font-family: 'Open Sans', sans-serif;
    font-size: 90%;
    font-weight: 600;
    color: var(--main-font-color);
}

.courseCard p {
    float:left;
    font-size: 90%;
    margin: 0;
    line-height: 160%;
}

.courseCardPrice {
    width: 25%;
    text-align: right;
}

.courseCardDate {
    width: 25%;
    border-right: solid 1px var(--main-border-color);
}

.courseCardTime {
    width: 25%;
    border-right: solid 1px var(--main-border-color);
}

.courseCardDuration {
    width: 25%;
    text-align: right;
}

.courseCard form {
    float: left;
    position: absolute;
    background-color: #fff;
    left: 0;
    width: 87.5%;
    margin: 20% 0 0 5%;
    padding: 1vh 1vw 4vw 3vw;
    border: solid 1px var(--main-border-color);
    box-shadow: 2px 25px 85px var(--main-border-color);
}

.courseCard form input {
    margin-right: 4vw;
}

.courseCard form label {
    float:left;
    width: 90%;
    font-size: 90%;
    color: var(--main-font-color);
}

.close-btn {
    width: 8%;
    text-align: right;
    margin-right: 2vw;
    padding-right: 2%;
}

.lbl-info {
    float: left;
    color: var(--main-bg-color);
}


.footer-info {
    margin-top: 7vh;
    padding: 3vh 0 3vh 0;
    border-top: solid 1px var(--main-border-color);
}

.footer-copy {
    background-color: var(--main-bg-color);
}

.footer-copy p{
    font-size: 85%;
    color: #fff;
    padding: 5vw;
    margin-bottom: 0;
}

